# Jinzamomi

./: .gitignore  .gitmodules  Makefile  README.md  jinzamomi.cabal  stack.yaml  uzume.cabal
app/: Main.hs
runtime/base/: index.html
runtime/base/js/: jinzamomi.js  uzume.js
runtime/drivers/krkr/js/: Array.js  Debug.js  Dictionary.js  Exception.js  Plugins.js  Script.js  Scripts.js  Storages.js  String.js  System.js  krkr.js
runtime/test/: index.html  mocha.html  test.krkr.js
runtime/test/proj/: startup.tjs.js
runtime/test/proj/system/: Initialize.tjs.js
scripts/: ghc-mod
src/: Jinzamomi.hs  Uzume.hs
src/Jinzamomi/: Driver.hs
src/Jinzamomi/Driver/: IR.hs  Krkr.hs  Util.hs
src/Jinzamomi/Driver/Krkr/: KAG2IR.hs  TJS2IR.hs
src/Uzume/: Driver.hs
src/Uzume/Driver/: IR.hs
src/Uzume/Driver/Krkr/: TJS2IR.hs
test/: IRSpec.hs
