name:                jinzamomi
version:             0.1.0.0
synopsis:            Ahead of Time transpiler from Bishoujo-game to HTML5
description:         Please see README.md
homepage:            https://github.com/ledyba/jinzamomi#readme
license:             GPL
license-file:        LICENSE
author:              Author name here
maintainer:          nasda60@hotmail.com
copyright:           2016 PSI, Momiji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jinzamomi
                     , Jinzamomi.Driver
                     , Jinzamomi.Driver.Util
                     , Jinzamomi.Driver.IR
  other-modules:   Jinzamomi.Driver.Krkr.TJS2IR
                     , Jinzamomi.Driver.Krkr
  build-depends:       base >= 4.7 && < 5
                     , text
                     , hslogger
                     , mtl
                     , template
                     , optparse-applicative
                     , directory
                     , filepath
                     , MissingH
                     , language-krkr
  default-language:    Haskell2010

executable jinzamomi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hslogger
                     , language-krkr
                     , jinzamomi
                     , text
                     , optparse-applicative
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       base
                     , hspec >= 1.3
                     , jinzamomi

source-repository head
  type:     git
  location: https://github.com/ledyba/jinzamomi
