name:                uzume
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/uzume#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Uzume
                     , Uzume.Driver.IR
                     , Uzume.Driver.Krkr.TJS2IR
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , template
                     , language-krkr
  default-language:    Haskell2010

executable uzume
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , language-krkr
                     , uzume
                     , text
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       base
                     , hspec >= 1.3
                     , uzume

source-repository head
  type:     git
  location: https://github.com/githubuser/uzume
